components/downloads/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: downloads
spec:
  replicas: 3
  selector:
    matchLabels:
      app: downloads
  template:
    metadata:
      labels:
        app: downloads
    spec:
      containers:
        - name: downloads
          image: 'ghcr.io/opencollaboration/downloads:latest'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
