components/downloads/base/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: downloads
spec:
  podSelector:
    matchLabels:
      app: downloads
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
